[tool.poetry]
name = "htc"
version = "0.1.0"
description = ""
authors = ["Juunsik <junhyeok_1996@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-dotenv = "^1.4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
